--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <button onclick="mostrarDesculpas()">Clique aqui</button>
 
     <div id="mensagem-container" class="oculto">
-      <p id="mensagem">Desculpa se eu fiz algo que te deixou triste. Você é muito especial pra mim. 💖</p>
+      <p id="mensagem">Desculpa pelas minhas gracinhas, me tira do cantinho do pensamento pf🦈🐺🔥</p>
       <img id="imagem" src="imagens/snoopy.jpg" alt="Snoopy fofinho" />
     </div>
   </div>
